zkzhome/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zkzhome
  namespace: zkzhome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zkzhome
  template:
    metadata:
      labels:
        app: zkzhome
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: zkzhome
          image: ghcr.io/zuzak/zkzhome@sha256:8323231e7e057989945d030f9de740c6755075de19dd0309d7ff8da8aa0f3b37
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
