zkzhome/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: zkzhome
  namespace: zkzhome
spec:
  selector:
    app: zkzhome
  ports:
    - name: http
      port: 8080
      targetPort: http
