zkzhome/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zuzakistan
  namespace: zkzhome
  # cert-manager not enabled for now
spec:
  ingressClassName: nginx
  rules:
    - host: zuzakistan.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zkzhome
                port:
                  name: http
